--- a/Friday/friday-client/package.json
+++ b/Friday/friday-client/package.json
@@ -12,9 +12,11 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "bootstrap": "^4.6.0",
+    "js-file-download": "^0.4.12",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-json-editor-ajrm": "^2.5.13",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
@@ -47,5 +49,8 @@
   "prettier": {
     "tabWidth": 4,
     "printWidth": 200
+  },
+  "devDependencies": {
+    "@types/react-json-editor-ajrm": "^2.5.1"
   }
 }
