--- a/Friday/friday-client/tsconfig.json
+++ b/Friday/friday-client/tsconfig.json
@@ -19,10 +19,7 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "./",
-    "paths": {
-      "@src/*": ["src/*"]
-    }
+    "baseUrl": "./"
   },
   "include": [
     "src"
